tests/Framework/Bus/Data/ValidCase/Context/Application/ValidQuery.php
<?php declare(strict_types=1);

namespace Tests\Framework\Bus\Data\ValidCase\Context\Application;

use Mage\Framework\Bus\Contracts\Query\Query;

final class ValidQuery implements Query {}
