tests/Framework/Bus/Data/InvalidTypeCase/Context/Application/InvalidQuery.php
<?php declare(strict_types=1);

namespace Tests\Framework\Bus\Data\InvalidTypeCase\Context\Application;

use Mage\Framework\Bus\Contracts\Query\Query;

final class InvalidQuery implements Query {}
